# Kursach-OOP

./: CMakeLists.txt  README.md  main.cpp
Classes/Enums/: TaskState.cpp  TaskState.h  WorkType.h
Classes/Managers/: EmployerManager.cpp  EmployerManager.h  FileWriter.cpp  FileWriter.h  Labor.cpp  Labor.h  Singleton.cpp  Singleton.h
Classes/People/: AvaliableWorker.cpp  AvaliableWorker.h  HRManager.cpp  HRManager.h  Person.cpp  Person.h  Worker.cpp  Worker.h
Classes/Speciefic/: AdminMenu.cpp  AdminMenu.h  LoginData.cpp  LoginData.h  ManagerMenu.cpp  ManagerMenu.h  Menu.cpp  Menu.h  Task.cpp  Task.h  Work.cpp  Work.h
