cmake_minimum_required(VERSION 3.20)
project(Kursach_OOP)

set(CMAKE_CXX_STANDARD 14)
add_executable(Kursach_OOP main.cpp Classes/People/Person.cpp Classes/People/Person.h Classes/People/Worker.cpp Classes/People/Worker.h Classes/Managers/EmployerManager.cpp Classes/Managers/EmployerManager.h Classes/Managers/Singleton.cpp Classes/Managers/Singleton.h Classes/Speciefic/AdminMenu.cpp Classes/Speciefic/AdminMenu.h Classes/Managers/Labor.cpp Classes/Managers/Labor.h Classes/Managers/FileWriter.cpp Classes/Managers/FileWriter.h Classes/Enums/WorkType.h Classes/People/AvaliableWorker.cpp Classes/People/AvaliableWorker.h Classes/Speciefic/Menu.cpp Classes/Speciefic/Menu.h Classes/Speciefic/LoginData.cpp Classes/Speciefic/LoginData.h)
